// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Card Base usage 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="TSCard card"
      subtitle="Subtitle"
      title="Title"
    >
      <div
        className="cardHeader card-header"
      >
        Header
      </div>
      <hr
        className="cardDivider"
      />
      <div
        className="TScardBody card-body"
      >
        
        
        <p
          className="card-text"
        >
          This is the body
        </p>
      </div>
      <div
        className="text-muted card-footer"
      >
        Footer
      </div>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Card Set props 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="TSCard card"
      subtitle=""
      title=""
    >
      
      <div
        className="TScardBody card-body"
      >
        
        
        <p
          className="card-text"
        >
          
        </p>
      </div>
      
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots CountryCard Base usage 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="card"
    >
      <div
        className="countryCardHeader card-header"
      >
        <img
          alt=""
          src="https://www.countryflags.io/fr/flat/64.png"
        />
        <div
          className="countryCardTitle"
        >
          Title
        </div>
      </div>
      <div
        className="countryCardBody card-body"
      >
        <p
          className="card-text"
        >
          This is the body
        </p>
      </div>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots CountryCard Set props 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="card"
    >
      <div
        className="countryCardHeader card-header"
      >
        <img
          alt=""
          src="https://www.countryflags.io/dk/flat/64.png"
        />
        <div
          className="countryCardTitle"
        >
          
        </div>
      </div>
      <div
        className="countryCardBody card-body"
      >
        <p
          className="card-text"
        >
          
        </p>
      </div>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Header Base usage 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="AppHeader"
      style={
        Object {
          "height": "420px",
        }
      }
    >
      <div
        className="title"
      >
        Paris
      </div>
      <div
        className="subtitle"
      >
        France
      </div>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Header Set props 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="AppHeader"
      style={
        Object {
          "height": "420px",
        }
      }
    >
      <div
        className="title"
      >
        Paris
      </div>
      <div
        className="subtitle"
      >
        France
      </div>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Navbar Base usage 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      className="Navbar navbar navbar-expand navbar-dark fixed-top"
    >
      <span
        className="navbar-brand"
        href=""
      >
        <img
          alt=""
          className="d-inline-block align-top"
          height="45"
          src="logo.png"
          width="45"
        />
        <span
          className="title navbar-text"
        >
          Traveling Strategy
        </span>
      </span>
      <div
        aria-expanded={null}
        className="justify-content-end navbar-collapse collapse"
      >
        <span
          className="navbar-text"
        >
          <a
            href=""
          >
            Login
          </a>
        </span>
      </div>
    </nav>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Navbar Set props 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <nav
      className="Navbar navbar navbar-expand navbar-dark fixed-top"
    >
      <span
        className="navbar-brand"
        href=""
      >
        <img
          alt=""
          className="d-inline-block align-top"
          height="45"
          src="logo.png"
          width="45"
        />
        <span
          className="title navbar-text"
        >
          Traveling Strategy
        </span>
      </span>
      <div
        aria-expanded={null}
        className="justify-content-end navbar-collapse collapse"
      >
        <span
          className="navbar-text"
        >
          <a
            href=""
          >
            Login
          </a>
        </span>
      </div>
    </nav>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Subtitle Base usage 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="section"
    >
      <div
        className="subtitle"
      >
        Health & Safety
      </div>
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;

exports[`Storyshots Subtitle Set props 1`] = `
Array [
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className="subtitle"
    >
      
    </div>
  </div>,
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>,
]
`;
